--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@ A->C</textarea
                     <input
                         style="position: fixed; left: 5%"
                         type="submit"
-                        value="Submit"
+                        value="Visualise🌲"
                     />
                 </form>
             </div>
